tests/lexer/fail002.ds
const u64_max = 0x10000000000000000u64;
